# serializer version: 1
# name: test_entities[switch.iseo_lock_33333333_phone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.iseo_lock_33333333_phone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '33333333 (phone)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '33333333 (phone)',
    'platform': 'iseo_argo_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'user_phone',
    'unique_id': 'aa:bb:cc:dd:ee:ff_user_17_3333333333333333333333333333cccc',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.iseo_lock_33333333_phone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ISEO Lock 33333333 (phone)',
    }),
    'context': <ANY>,
    'entity_id': 'switch.iseo_lock_33333333_phone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.iseo_lock_alice_card-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.iseo_lock_alice_card',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alice (card)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Alice (card)',
    'platform': 'iseo_argo_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'user_rfid',
    'unique_id': 'aa:bb:cc:dd:ee:ff_user_16_1111111111111111111111111111aaaa',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.iseo_lock_alice_card-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ISEO Lock Alice (card)',
    }),
    'context': <ANY>,
    'entity_id': 'switch.iseo_lock_alice_card',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch.iseo_lock_bob_pin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.iseo_lock_bob_pin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Bob (PIN)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Bob (PIN)',
    'platform': 'iseo_argo_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'user_pin',
    'unique_id': 'aa:bb:cc:dd:ee:ff_user_18_2222222222222222222222222222bbbb',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch.iseo_lock_bob_pin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ISEO Lock Bob (PIN)',
    }),
    'context': <ANY>,
    'entity_id': 'switch.iseo_lock_bob_pin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
